fix the dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -180,7 +180,7 @@ html {
 
 #filterModal::-webkit-scrollbar-thumb {
   border-radius: 10px;
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.01);
   background-color: #c9c7c7;
 }
 
